// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link component > renders a back link correctly 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2"
    href="https://www.example.com"
  >
    <span
      class="_icon_i4xp0_2 _icon--arrow-left_i4xp0_25"
    />
    Back to the list
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a disabled link with urn and iamActions correctly 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2 _link--disabled_udbet_32"
    data-part="trigger"
    data-scope="tooltip"
    data-state="closed"
    dir="ltr"
    href="https://www.example.com"
    id="tooltip::r1::trigger"
    tabindex="-1"
  >
    Disabled Protected Link
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a external link correctly with label as prop 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2"
    href="https://www.ovhcloud.com/"
    target="_blank"
  >
    External Page
    <span
      class="_icon_i4xp0_2 _icon--external-link_i4xp0_190"
    />
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a link with custom className and IAM props 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2 _link--disabled_udbet_32 custom-link-class"
    data-part="trigger"
    data-scope="tooltip"
    data-state="closed"
    dir="ltr"
    href="https://www.example.com"
    id="tooltip::r4::trigger"
    tabindex="-1"
  >
    Custom Styled Protected Link
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a link with disabled IAM check 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2 _link--disabled_udbet_32"
    data-part="trigger"
    data-scope="tooltip"
    data-state="closed"
    dir="ltr"
    href="https://www.example.com"
    id="tooltip::r2::trigger"
    tabindex="-1"
  >
    Link with Disabled IAM Check
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a link with multiple iamActions 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2 _link--disabled_udbet_32"
    data-part="trigger"
    data-scope="tooltip"
    data-state="closed"
    dir="ltr"
    href="https://www.example.com"
    id="tooltip::r3::trigger"
    tabindex="-1"
  >
    Link with Multiple IAM Actions
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a link with urn and iamActions correctly 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2 _link--disabled_udbet_32"
    data-part="trigger"
    data-scope="tooltip"
    data-state="closed"
    dir="ltr"
    href="https://www.example.com"
    id="tooltip::r0::trigger"
    tabindex="-1"
  >
    Protected Link
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a link with urn and iamActions without tooltip 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2 _link--disabled_udbet_32"
    href="https://www.example.com"
    tabindex="-1"
  >
    Protected Link No Tooltip
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a next link correctly 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2"
    href="https://www.example.com"
  >
    Next Page
    <span
      class="_icon_i4xp0_2 _icon--arrow-right_i4xp0_31"
    />
  </a>
</DocumentFragment>
`;

exports[`Link component > renders a simple link correctly 1`] = `
<DocumentFragment>
  <a
    class="_link_udbet_2"
    href="https://www.example.com"
  >
    test link
  </a>
</DocumentFragment>
`;
